Pass over the whole paper

--- a/mybib.bib
+++ b/mybib.bib
@@ -36,45 +36,12 @@ url = {http://www.popphoto.com/news/2013/05/how-many-photos-are-uploaded-to-inte
 }
 
 @InProceedings{JegouChum12,
-  IS = { zkontrolovano 15 Jan 2013 },
-  UPDATE  = { 2012-12-27 },
-  editor     = {Fitzgibbon, Andrew and Lazebnik, Svetlana and 
-                Perona, Pietro and Sato, Yoichi and Schmid, Cordelia},
-  booktitle  = {Computer Vision - ECCV 2012 - Part II},
-  publisher  = {Springer},
-  address    = {Heidelberg, Germany},
-  series     = {Lecture Notes in Computer Science},
-  volume     = {7573},
   year       = {2012},
-  isbn       = {978-3-642-33708-6},
   author     = {J{\' e}gou, Herv{\' e} and Chum, Ond{\v r}ej},
   title      = {Negative Evidences and Co-occurences in Image Retrieval: 
                 The Benefit of PCA and Whitening},
+   booktitle = eccv,
   pages      = {774--787},
-  book_pages = {889},
-  month      = {October},
-  day        = {7-13},
-  venue      = {Florence, Italy},
-  annote = {The paper addresses large scale image retrieval with short
-    vector representations. We study dimensionality reduction by
-    Principal Component Analysis (PCA) and propose improvements to its
-    different phases.We show and explicitly exploit relations between
-    i) mean subtraction and the negative evidence, i.e., a visual word
-    that is mutually missing in two descriptions being compared, and
-    ii) the axis de-correlation and the co-occurrences
-    phenomenon. Finally, we propose an effective way to alleviate the
-    quantization artifacts through a joint dimensionality reduction of
-    multiple vocabularies. The proposed techniques are simple, yet
-    significantly and consistently improve over the state of the art
-    on compact image representations. Complementary experiments in
-    image classification show that the methods are generally
-    applicable.},
-  keywords =   {image retrieval, short codes, PCA},
-  prestige =   {important},
-  authorship = {50-50},
-  note =       {CD-ROM},
-  project =    {GACR P103/12/2310, Quaero project by OSEO},
-  psurl =      {http://cmp.felk.cvut.cz/~chum/papers/Jegou-ECCV12.pdf},
 }
 
 
@@ -82,7 +49,7 @@ url = {http://www.popphoto.com/news/2013/05/how-many-photos-are-uploaded-to-inte
   author    = {Florent Perronnin and
                Christopher R. Dance},
   title     = {Fisher Kernels on Visual Vocabularies for Image Categorization},
-  booktitle = {CVPR},
+  booktitle = cvpr,
   year      = {2007},
   ee        = {http://dx.doi.org/10.1109/CVPR.2007.383266},
   bibsource = {DBLP, http://dblp.uni-trier.de}
@@ -740,4 +707,30 @@ using a large dataset of {CAD} models",
   Booktitle = {Proceedings of the {IEEE} Conf. 
                on Computer Vision and Pattern Recognition ({CVPR})},
   Year      = {2008},
+}
+
+@inproceedings{Kalogerakis09,
+	Author = {Kalogerakis, E and Vesselova, O. and Hays, J. and Efros, A. and Hertzmann, A.},
+	_Booktitle = {ICCV},
+  booktitle={IEEE 12th International Conference on Computer Vision (ICCV)},
+  pages={253--260},
+	Title = {Image Sequence Geolocation with Human Travel Priors},
+	Year = {2009}}
+
+@article{Jegou11,
+  title={Product quantization for nearest neighbor search},
+  author={Jegou, H. and Douze, M. and Schmid, C.},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={33},
+  number={1},
+  pages={117--128},
+  year={2011},
+  publisher={IEEE}
+}
+
+@inproceedings{Torii15,
+author = {Torii, A. and Arandjelovi\'c, R. and Sivic, J. and Okutomi, M. and Pajdla, T.},
+title = {24/7 place recognition by view synthesis},
+booktitle = cvpr,
+year = {2015},
 }
